--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Poppins', sans-serif;
 }
 #banner{
-    background: linear-gradient(rgba(0,0,0,0.5),#009688),url(iphone.img\img 4.jpg);
+    background: linear-gradient(rgba(0,0,0,0.5),#009688),url(iphone.img\img5.jpeg);
     background-size: cover;
     background-position: center;
     height: 100vh;
