--- a/style.css
+++ b/style.css
@@ -3,39 +3,39 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
-#hospital{
+#banner{
     background:linear-gradient(rgba(0,0,0,0.5),#009688)url(iphone.img\img2.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
 
 }
-#hospital img{height:100px; width:100px;}
+#banner img{height:100px; width:100px;}
 .logo{
     width: 140px;
     position: absolute;
     top: 4%;
     left: 10%;
 }
-.hospital-text{
+.banner-text{
     text-align: center;
     color: #fff;
     padding-top: 180px;
 }
-.hospital-text h1{
+.banner-text h1{
     font-size: 130px;
     font-family: 'Poppins', sans-serif;
     font-style: italic;
 }
     
-.hospital-text p{
+.banner-text p{
     font-size: 20px;
     font-style: italic;
 }
-.hospital-btn{
+.banner-btn{
     margin: 70px auto 0;
 }
-.hospital-btn a{
+.banner-btn a{
     width: 150px;
     text-decoration: none;
     display: inline-block;
@@ -47,7 +47,7 @@
     z-index: 1;
     transition: color .5s ease;
 }
-.hospital-btn a span{
+.banner-btn a span{
     width: 0;
     height: 100%;
     position: absolute;
@@ -57,10 +57,10 @@
     z-index: -1;
     transition: .5s ease;
 }
-.hospital-btn a:hover span{
+.banner-btn a:hover span{
     width: 100%;
 }
-.hospital-btn a:hover{
+.banner-btn a:hover{
     color: black;
 }
 
