--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Poppins', sans-serif;
 }
 #banner{
-    background:linear-gradient(rgba(0,0,0,0.5),#009688)url(iphone.img\img2.jpg);
+    background:linear-gradient(rgba(0,0,0,0.5),#009688)url();
     background-size: cover;
     background-position: center;
     height: 100vh;
