--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Poppins', sans-serif;
 }
 #banner{
-    background:linear-gradient(rgba(0,0,0,0.5),#009688)url();
+    background:linear-gradient(rgba(0,0,0,0.5),#009688)url(img 3.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -19,7 +19,7 @@
 }
 .banner-text{
     text-align: center;
-    color: #fff;
+    color:lightslategray;
     padding-top: 180px;
 }
 .banner-text h1{
