--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 .banner-text{
     text-align: center;
-    color:lightslategray;
+    color:black;
     padding-top: 180px;
 }
 .banner-text h1{
