--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
     display: inline-block;
     margin: 0 10px;
     padding: 12px 0;
-    color: #fff;
+    color: black;
     border: .5px solid #fff;
     position: relative;
     z-index: 1;
@@ -53,7 +53,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: #fff;
+    background: black;
     z-index: -1;
     transition: .5s ease;
 }
