--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 .banner-text{
     text-align: center;
-    color:white;
+    color: #fff;
     padding-top: 180px;
 }
 .banner-text h1{
@@ -40,7 +40,7 @@
     display: inline-block;
     margin: 0 10px;
     padding: 12px 0;
-    color: white;
+    color: #fff;
     border: .5px solid #fff;
     position: relative;
     z-index: 1;
@@ -52,7 +52,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: black;
+    background: #fff;
     z-index: -1;
     transition: .5s ease;
 }
