--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 .banner-text{
     text-align: center;
-    color: #fff;
+    color: black;
     padding-top: 180px;
 }
 .banner-text h1{
@@ -60,7 +60,7 @@
     width: 100%;
 }
 .banner-btn a:hover{
-    color: black;
+    color: white;
 }
 
 
