--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
     display: inline-block;
     margin: 0 10px;
     padding: 12px 0;
-    color: #fff;
+    color: black;
     border: .5px solid #fff;
     position: relative;
     z-index: 1;
@@ -60,7 +60,7 @@
     width: 100%;
 }
 .banner-btn a:hover{
-    color: white;
+    color: black;
 }
 
 
