--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 .banner-text{
     text-align: center;
-    color: black;
+    color: #fff;
     padding-top: 180px;
 }
 .banner-text h1{
@@ -40,7 +40,7 @@
     display: inline-block;
     margin: 0 10px;
     padding: 12px 0;
-    color: black;
+    color: white;
     border: .5px solid black;
     position: relative;
     z-index: 1;
