--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
     display: inline-block;
     margin: 0 10px;
     padding: 12px 0;
-    color: white;
+    color: lightblue;
     border: .5px solid black;
     position: relative;
     z-index: 1;
